# video-message-app

./: .env.aws.example  .env.security  .gitignore  .mcp.json  AWS_DEVELOPMENT_WORKFLOW.md  AWS_GPU_MIGRATION_PLAN.md  AWS_IAM_SETUP_GUIDE.md  AWS_MIGRATION_PLAN.md  AWS_MULTIPLE_PROFILES_GUIDE.md  AWS_QUICK_START.md  AWS_SIMPLE_MIGRATION_PLAN.md  CLAUDE.md  DOMAIN_SETUP_GUIDE.md  DUCKDNS_SETUP_COMPLETED.md  EC2_CLEANUP_PLAN.md  EC2_FINAL_MIGRATION_EXECUTION_PLAN.md  EC2_FRESH_START_GUIDE.md  EC2_MIGRATION_COMPLETION_REPORT.md  EC2_QUICK_COMMANDS.md  EC2_REBUILD_DECISION_GUIDE.md  EC2_REBUILD_MANUAL.md  GEMINI_SSH_SETUP.md  GPU_MIGRATION_SUCCESS_REPORT.md  HTTPS_MIGRATION_PLAN.md  IMMEDIATE_RESPONSE_REPORT.md  OPENVOICE_EC2_TROUBLESHOOTING.md  OPENVOICE_IMPLEMENTATION_PLAN.md  OPENVOICE_TROUBLESHOOTING.md  PERFORMANCE_TEST_SUMMARY.md  QWEN_SSH_SETUP.md  SECURITY_AUDIT_REPORT_IMMEDIATE_2025_11_02.md  SECURITY_AUDIT_TMPFS_PHASE1.md  TEST_GUIDE.md  UPDATED_IMPLEMENTATION.md  UV_OPENVOICE_SERVICE.py  background-enhancement-plan.md  develop-plan-0.md  develop-plan.md  eris_coordination_plan.py  eris_tactical_coordination.json  (+11 more)
.claude/: CLAUDE.md
.serena/: project.yml
scripts/: aws-deploy.sh  aws-manage.sh  aws-quick-sync.sh  aws-setup-check.sh  gpu-manage.sh
video-message-app/: .env.example  .gitignore  (+103 more)
video-message-app/openvoice_native/: .gitignore  DOCKER_IMPLEMENTATION_GUIDE.md  Dockerfile  README.md  config.py  main.py  models.py  openvoice.service  openvoice_service.py  pyproject.toml  requirements.txt  requirements_ec2.txt  setup.py  setup_conda_uv.sh  setup_ec2.sh  setup_uv.py  setup_uv_modern.sh  start.sh  start_dev.sh  start_uv.sh  start_uv_modern.sh  test_clone.py
(+335 files in other folders)
