[project]
name = "openvoice-native-service"
version = "1.0.0"
description = "OpenVoice V2 Native Service for macOS"
requires-python = ">=3.11,<3.12"

dependencies = [
    # FastAPI
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Core dependencies
    "librosa>=0.9.1",
    "soundfile>=0.12.0",
    "unidecode>=1.3.0",
    "eng_to_ipa>=0.0.2",
    "inflect>=6.0.0",
    "scipy>=1.7.0",
    # NumPy compatible version (OpenVoice compatible)
    "numpy>=1.22.0,<1.25.0",
    # Other dependencies
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "mutagen>=1.47.0",
    # Audio processing
    "pydub>=0.25.0",
    "ffmpeg-python>=0.2.0",
    # OpenVoice dependencies (manually specified to avoid conflicts)
    "faster-whisper>=0.9.0",
    "wavmark>=0.0.3",
    "whisper-timestamped>=1.14.2",
    "pypinyin>=0.50.0",
    "cn2an>=0.5.22",
    "jieba>=0.42.1",
    "langid>=1.1.6",
    # MeloTTS dependencies
    "txtsplit",
    "transformers>=4.27.4",
    "num2words>=0.5.12",
    "unidic-lite>=1.0.8",
    "unidic>=1.1.0",
    "mecab-python3>=1.0.9",
    "pykakasi>=2.2.1",
    "fugashi>=1.3.0",
    "g2p-en>=2.1.0",
    "anyascii>=0.3.2",
    "jamo>=0.4.1",
    "gruut[de,es,fr]>=2.2.3",
    "g2pkk>=0.1.1",
    "tqdm",
    "loguru>=0.7.2",
]

[tool.uv]
# メインインデックスはPyPI（一般パッケージ用）
index-url = "https://pypi.org/simple"

# Note: OpenVoice and MeloTTS are installed separately via uv pip install --no-deps
# to avoid dependency conflicts with numpy versions